--- a/partials/post-full.hbs
+++ b/partials/post-full.hbs
@@ -27,7 +27,8 @@
       </section>
       <footer class="meta"></footer>
     </div>
-    <div class="author-info">
+    <div class="clearfix"></div>
+    <footer class="author-info">
       {{#foreach authors}}
         <div class="author">
           {{#if profile_image}}
