--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -2,21 +2,50 @@
   <div class="inner">
     {{#if @site.logo}}
       <a class="logo" href="{{@site.url}}">
-        <img src="{{@site.logo}}" alt="logo"/>
+        <img src="{{@site.logo}}" alt="logo" />
       </a>
     {{/if}}
-    <h1 class="site-title">{{@site.title}}</h1>
-    <h2 class="site-description">{{@site.description}}</h2>
+    <h1 class="site-title">
+      {{@site.title}}
+    </h1>
+    <h2 class="site-description">
+      {{@site.description}}
+    </h2>
     <nav>
       {{navigation}}
     </nav>
     <footer class="site-footer">
       <div class="inner">
         <section class="social-links">
-          <a class="subscribe" href="{{@site.url}}/rss/"><i class="fas fa-rss"></i></a>
+          <a class="subscribe" href="{{@site.url}}/rss/">
+            <i class="fas fa-rss"></i>
+          </a>
+          {{#if @site.facebook}}
+            <a
+              href="{{facebook_url @site.facebook}}"
+              target="_blank"
+              rel="noopener"
+            >
+              <i class="fab fa-facebook"></i>
+            </a>
+          {{/if}}
+          {{#if @site.twitter}}
+            <a
+              href="{{twitter_url @site.twitter}}"
+              target="_blank"
+              rel="noopener"
+            >
+              <i class="fab fa-twitter"></i>
+            </a>
+          {{/if}}
         </section>
         <section class="copyright">
-          <a href="{{@site.url}}">{{@site.title}}</a> &copy; {{date format="YYYY"}}
+          <a href="{{@site.url}}">
+            {{@site.title}}
+          </a>
+          ©
+          {{date format="YYYY"}}
+        </section>
         </section>
       </div>
     </footer>
