Add "Published with Ghost" to sidebar

--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -46,6 +46,11 @@
           ©
           {{date format="YYYY"}}
         </section>
+        <section class="published-with">
+          Published with
+          <a href="https://ghost.org">
+            Ghost
+          </a>
         </section>
       </div>
     </footer>
